# udemy-gen-ai-courses

./: README.md
Ultimate-RAG-Bootcamp/: README.md  pyproject.toml  requirements.txt
Ultimate-RAG-Bootcamp/Data-Integration/: data-ingestion.ipynb  json-data-ingestion.ipynb  pdf-data-ingestion.ipynb  sql-data-ingestion.ipynb  structured-data-ingestion.ipynb  word-data-ingestion.ipynb
Ultimate-RAG-Bootcamp/Data-Integration/data/databases/: company.db
Ultimate-RAG-Bootcamp/Data-Integration/data/structured_files/: inventory.xlsx
Ultimate-RAG-Bootcamp/Data-Integration/data/text_files/: machine_learning.txt  python_intro.txt
Ultimate-RAG-Bootcamp/Embeddings/: cosine-similarity.ipynb  embeddings.ipynb  huggingface-embeddings.ipynb  openai-embeddings.ipynb
